syntax="proto3";

package proto;
option java_package = "generatedClasses";

message Student {
    int64 student_id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
}

service StudentService {
    rpc AddStudent (Student) returns (Student);
    rpc GetStudent (StudentRequest) returns (Student);
    rpc GetAllStudents (EmptyRequest1) returns (stream StudentsResponse);
    rpc DeleteStudent (StudentRequest) returns (EmptyResponse1);
    rpc UpdateStudent (Student) returns (Student);
}



message StudentsResponse {
    repeated Student students = 1;
}

message StudentRequest {
    int64 student_id = 1;
}

message EmptyRequest1 {}
message EmptyResponse1 {}
